# LinearRegression

./: CMakeLists.txt  main.cpp
LinearRegressionLib/: CMakeLists.txt  LinearRegressionModel.cpp  LinearRegressionModel.h
LinearRegressor/: CMakeLists.txt  LinearRegressionData.cpp  LinearRegressionData.h  LinearRegressionModel.cpp  LinearRegressionModel.h  LinearRegressor.cpp  LinearRegressor.h
